cluster/apps/rook-ceph/bucket-tempdata/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bucket-tempdata
  namespace: rook-ceph
spec:
  ingressClassName: nginx-private
  rules:
    - host: bucket-tempdata.${SECRET_PRIVATE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-rgw-bucket-tempdata
                port:
                  number: 80
